--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 <main>
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		<p class="banner-tagline">Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
-			<div class="dot"></div>
+			<div class="dot dot_selected"></div>
 			<div class="dot"></div>
 			<div class="dot"></div>
 			<div class="dot"></div>
 		</div>
 		<div class="arrow">
 				<img class="arrow_left" src="assets/images/arrow_left.png" alt="fléche de gauche">
-				<img class="arrow_right" src="assets/images/arrow_right.png" alt="fléche de droite">
-		</div>
+				<img class="arrow_right"  src="assets/images/arrow_right.png" alt="fléche de droite">
 	</div>
+</div>
 	<section id="about-us" class="container">
 		<div>
 			<h2>Qui sommes-nous ?</h2>
