--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p class="banner-tagline">Impressions tous formats <span>en boutique et en ligne</span></p>
-		<div class="dots">
-			<div class="dot dot_selected"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
-		</div>
+		<ul class="dots dots-container"></ul>
 		<div class="arrow">
 				<img class="arrow_left" src="assets/images/arrow_left.png" alt="fléche de gauche">
 				<img class="arrow_right"  src="assets/images/arrow_right.png" alt="fléche de droite">
